# disaster-alerts-dev

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
config/: app.yaml  recipients.yaml  thresholds.yaml
cron/: crontab.sample
scripts/: run.sh
src/disaster_alerts/: __init__.py  __main__.py  cli.py  email.py  pipeline.py  plot_html_map.py  rules.py  settings.py  state.py
src/disaster_alerts/providers/: common.py  nws.py  usgs.py
src/disaster_alerts/templates/: alert.html  alert.txt
tests/: conftest.py  test_email.py  test_pipeline.py  test_plot_html_map.py  test_providers.py  test_rules.py  test_state.py
web/: app.py
